# instaclone-django

./: build.sh  pyproject.toml  render.yaml
comments/: models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_author_alter_comment_post_and_more.py
config/: authentication.py  settings.py  urls.py
hashtags/: models.py  serializers.py  urls.py  views.py
hashtags/migrations/: 0001_initial.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_rename_usertag_post_usertags.py  0003_post_created_at_post_updated_at.py  0004_post_saves.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_bio_user_followers_user_following_and_more.py  0003_alter_user_followers_alter_user_following.py
